--- a/modularity.html
+++ b/modularity.html
@@ -153,16 +153,16 @@
 	    		<p class="instruction-text">Style a pagination control for navigating through pages of search results.</p>
 					<div class="instruction-answer">
 			    	<!-- Edit here -->
-			    	<ol>
-			    		<li><a href="#">prev</a></li>
-			    		<li><a href="#">5</a></li>
-			    		<li><a href="#">6</a></li>
-			    		<li><a href="#">7</a></li>
+			    	<ol class="pagination">
+			    		<li style="border: none;"><a href="#">prev</a></li>
+			    		<li class="other-pages"><a href="#">5</a></li>
+			    		<li class="other-pages"><a href="#">6</a></li>
+			    		<li class="other-pages"><a href="#">7</a></li>
 			    		<li><span>8</span></li>
-			    		<li><a href="#">9</a></li>
-			    		<li><a href="#">10</a></li>
-			    		<li><a href="#">11</a></li>
-			    		<li><a href="#">next</a></li>
+			    		<li class="other-pages"><a href="#">9</a></li>
+			    		<li class="other-pages"><a href="#">10</a></li>
+			    		<li class="other-pages"><a href="#">11</a></li>
+			    		<li style="border: none;"><a href="#">next</a></li>
 			    	</ol>
 				    <!-- End editable area -->
 			    </div>
@@ -175,18 +175,18 @@
 					<div class="instruction-answer">
 			    	<!-- Edit here -->
 				    <div>
-				    	<div style="float:left">
+				    	<div class="part7-float">
 					    	<img src="http://gravatar.com/avatar/0?d=identicon">
 					    </div>
-				    	<div style="">
+				    	<div class="comment">
 				    		<strong>@metaraine</strong>
 					    	<time>Thursday, June 27, 2013, 4:15pm</time>
 					    	<p>Wow, that was an amazing article. Wow, that was an amazing article. Wow, that was an amazing article. Wow, that was an amazing article. Wow, that was an amazing article. Wow, that was an amazing article. Wow, that was an amazing article. Wow, that was an amazing article. Wow, that was an amazing article.Wow, that was an amazing article.Wow, that was an amazing article.Wow, that was an amazing article.Wow, that was an amazing article.Wow, that was an amazing article.Wow, that was an amazing article.Wow, that was an amazing article.Wow, that was an amazing article.Wow, that was an amazing article. </p>
 					    </div>
 					  </div>
 
-				    <div>
-				    	<div>
+				    <div class="comment">
+				    	<div class="part7-float">
 					    	<img src="http://gravatar.com/avatar/1?d=identicon">
 					    </div>
 				    	<div>
@@ -196,8 +196,8 @@
 					    </div>
 					  </div>
 
-				    <div>
-				    	<div>
+				    <div class="comment">
+				    	<div class="part7-float">
 					    	<img src="http://gravatar.com/avatar/0?d=identicon">
 					    </div>
 				    	<div>
@@ -205,8 +205,8 @@
 					    	<time>2 hours ago</time>
 					    	<p>How about we have the RefactorU student climb Bear Peak each morning before class?</p>
 
-						    <div>
-						    	<div>
+						    <div class="subcomment">
+						    	<div class="part7-float">
 							    	<img src="http://gravatar.com/avatar/1?d=identicon&s=60">
 							    </div>
 						    	<div>
@@ -216,8 +216,8 @@
 							    </div>
 							  </div>
 
-						    <div>
-						    	<div>
+						    <div class="subcomment">
+						    	<div class="part7-float">
 							    	<img src="http://gravatar.com/avatar/2?d=identicon&s=60">
 							    </div>
 						    	<div>
