--- a/modularity.html
+++ b/modularity.html
@@ -267,14 +267,14 @@
                     these styles when you're not actively working on them, otherwise they'll cover the whole page.</p>
                 <div class="instruction-answer">
                     <!-- Edit here -->
-                    <div>
+                    <div  class="shadowbox-bg">
                         <div>
-                            <div>
+                            <div class="shadowbox-fg">
                                 <h3>Hello</h3>
                                 <p>Cupcake ipsum dolor sit amet. Gummies lemon drops pastry topping wypas jujubes gummi bears. Cotton candy powder topping bear claw halvah jelly beans bear claw. Chocolate cake ice cream gummies apple pie muffin wafer gummi
                                     bears. Cupcake ipsum dolor sit amet. Gummies lemon drops pastry topping wypas jujubes gummi bears. Cotton candy powder topping bear claw halvah jelly beans bear claw. Chocolate cake ice cream gummies apple pie muffin
                                     wafer gummi bears.</p>
-                                <div>
+                                <div class="button align-right">
                                     <a>Close</a>
                                 </div>
                             </div>
