renamed some of the classes in comment stream

--- a/modularity.html
+++ b/modularity.html
@@ -175,7 +175,7 @@
 					<div class="instruction-answer">
 			    	<!-- Edit here -->
 				    <div>
-				    	<div class="part7-float">
+				    	<div class="comment-img">
 					    	<img src="http://gravatar.com/avatar/0?d=identicon">
 					    </div>
 				    	<div class="comment">
@@ -186,7 +186,7 @@
 					  </div>
 
 				    <div class="comment">
-				    	<div class="part7-float">
+				    	<div class="comment-img">
 					    	<img src="http://gravatar.com/avatar/1?d=identicon">
 					    </div>
 				    	<div>
@@ -197,7 +197,7 @@
 					  </div>
 
 				    <div class="comment">
-				    	<div class="part7-float">
+				    	<div class="comment-img">
 					    	<img src="http://gravatar.com/avatar/0?d=identicon">
 					    </div>
 				    	<div>
@@ -206,10 +206,10 @@
 					    	<p>How about we have the RefactorU student climb Bear Peak each morning before class?</p>
 
 						    <div class="subcomment">
-						    	<div class="part7-float">
+						    	<div class="comment-img">
 							    	<img src="http://gravatar.com/avatar/1?d=identicon&s=60">
 							    </div>
-						    	<div >
+						    	<div class="comment">
 						    		<strong>@seandaken</strong>
 							    	<time>45 minutes ago</time>
 							    	<p>Sure</p>
@@ -217,10 +217,10 @@
 							  </div>
 
 						    <div class="subcomment">
-						    	<div class="part7-float">
+						    	<div class="comment-img">
 							    	<img src="http://gravatar.com/avatar/2?d=identicon&s=60">
 							    </div>
-						    	<div>
+						    	<div class="comment">
 						    		<strong>@nullempire</strong>
 							    	<time>just now</time>
 							    	<p>No!</p>
